# CppOptimization

./: README.md
binder/src/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
binder/src/binder-control/: Makefile  binder_control  cmake_install.cmake
binder/src/libs/: Makefile  cmake_install.cmake
binder/src/libs/binder/: IPCThreadState.cpp  ProcessState.cpp
binder/src/logging/: CMakeLists.txt  Makefile  cmake_install.cmake  libliblog.so.1  libliblog.so.1.0  log.cpp  log.h
binder/src/servicemanager/: CMakeCache.txt  Makefile  cmake_install.cmake  service_manager
binder/src/services/app-service/: applicationManager.service
binder/src/services/app-service/interface/: CMakeLists.txt  IApplicationManagerReceiver.cpp  IApplicationManagerService.cpp  Makefile  cmake_install.cmake  libiapplication.so.1  libiapplication.so.1.0
binder/src/services/app-service/interface/include/: IApplicationManagerReceiver.h  IApplicationManagerService.h  IApplicationManagerServiceTypes.h
binder/src/services/config-service/: configurationManager.service
binder/src/services/config-service/interface/: CMakeLists.txt  IConfigurationManagerReceiver.cpp  IConfigurationManagerService.cpp  Makefile  cmake_install.cmake  libiconfiguration.so.1  libiconfiguration.so.1.0
binder/src/services/config-service/interface/include/: IConfigurationManagerReceiver.h  IConfigurationManagerService.h  IConfigurationManagerServiceTypes.h
binder/src/test/: CMakeLists.txt  Makefile  cmake_install.cmake  test_service.cpp
